methods.basics.Methods.scala.error
Compilation error:
Methods:16: error: not found: value dropBuggle
  dropBuggle()
  ^